handle JVM args more cleanly